# chipshouter-picoemp

firmware/c/: CMakeLists.txt  README.md  main.c  oled.c  oled.h  picoemp.c  picoemp.h  serial.c  serial.h  settings.c  settings.h  trigger_basic.pio
